# cot_monitoring_environment

./: .env.template  .gitignore  CLAUDE.md  README.md  generate_plots.sh  genetic_algorithm_plan.md  plot_from_json.py  pyproject.toml  run_preference_analysis.sh  run_vector_analysis.sh
deepseek_agent/: base_agent.py  deepseek_agent_async.py  research_oversight_task_async.py  run_paper_table.sh  sae_task.py  summarize_results.py  tools.py
deepseek_agent/agents/: __init__.py  base_agent.py  deepseek_agent_async.py  deepseek_api_async.py  openrouter_agent_async.py
deepseek_agent/sae_labelling/: config.yaml  evaluate.py  features_deception.json  harmful_features.json  harmful_features_full.json  labelling_overseer.py  sae_labelling.py  sae_labelling_utils.py  sae_prompts.py  sae_task.py  subset_harmful_features.json
deepseek_agent/tests/: test_openrouter_reasoning.py
deepseek_agent/tool_box/: internet_search_tool.py  predict_activations.py  steganography_tools.py
plots/: cot_monitor.csv  cot_monitor_plot.py  refusal rates - DNA dataset - results.csv  refusals.py
src/preference_text_game/: README.md  analyze_contradictions.py  create_preference_breakdown.py  demo_openrouter.py  improved_preference_analysis.py  inspect_contradiction_analysis.py  inspect_preference_task.py  openrouter_client.py  quest_preference_game.py  run_game.py  run_game_sync.py  run_improved_analysis.py  run_preference_comparison.py  run_quest_game.py  simple_contradiction_summary.py  simple_openrouter_client.py  stated_vs_revealed_preferences.py  task.py  task_categories.py  vector_consistency.py  visualize_inspect_results.py  visualize_preferences.py  visualize_simplified.py
src/preference_text_game/evolution/: README.md  __init__.py  fitness_evaluator.py  genetic_task_evolution.py  task_mutator.py  task_population.py  task_recombinator.py
tests/: test_agent.py  test_async.py  test_preference_text_game.py  test_quest_preference_game.py
(+3 files in other folders)
